Adjusted the file to be multiple files for easier readability still need to troubleshoot image issue

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
 .hero {
   width: 100%;
   height: 100vh;
-  background-image: url('https://github.com/Helasrebellion/helasrebellion.github.io/blob/main/Images/Landingpage.gif?raw=true');
+  background-image: url('Photos/Landingpage.gif');
   background-size: cover;
   background-position: center;
   display: flex;
@@ -22,9 +22,6 @@ body {
   transition: opacity 1s ease;
 }
 
-.hide-hero {
-  opacity: 0;
-}
 
 .hero-content {
   position: relative;
